Bug 76457 - Calc's "edit print range" dialog is squashed on the right side.
Summary: Calc's "edit print range" dialog is squashed on the right side.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-21 15:05 UTC by Kohei Yoshida
Modified: 2014-03-21 20:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Squashed range picker buttons (18.98 KB, image/png)
2014-03-21 15:05 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-03-21 15:05:05 UTC
This is for the master branch only.

In Calc, go to 

Format -> Print Ranges -> Edit

to launch the dialog.  Those 3 range picker buttons on the right hand side are squashed, and widening the dialog won't change it.  Even extending the dialog to the right to make it wider will not make those buttons unsquashed.

I'll attach a screenshot shortly.
Comment 1 Kohei Yoshida 2014-03-21 15:05:41 UTC
Created attachment 96172 [details]
Squashed range picker buttons
Comment 2 Kohei Yoshida 2014-03-21 15:05:56 UTC
confirming.
Comment 3 Kohei Yoshida 2014-03-21 15:06:21 UTC
Adding Caolan on CC.
Comment 4 Commit Notification 2014-03-21 17:17:18 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ae556c626da301f3798c33dc7632c7c891f2a04

Related: fdo#76457 set the edit fields to expand



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2014-03-21 17:22:51 UTC
its a regression from 1f6e88276006bea5d597ee6ca6fdf3af4dbf5ffd (for some reason)
Comment 6 Commit Notification 2014-03-21 20:40:37 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d2bc27c85b7c0976921d704f73286dc771d4f67b

Resolves: fdo#76457 image buttons too narrow



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2014-03-21 20:44:22 UTC
god I hate vcl