Resolves: fdo#76457 image buttons too narrow

but we liked the size of the symbol buttons

regression since 1f6e88276006bea5d597ee6ca6fdf3af4dbf5ffd

Really the PushButton::CalcMinimumSize and PushButton::ImplDrawPushButton are
the better place to handle this, but its such a train-wreck

Change-Id: Ib7ba00c6a9c2698ff4e4f264c4242bf48a686da8